base generation pdf et mail via doc_edition ok

--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -5,7 +5,7 @@
 
     <%= render 'synthese' %>
 
-    <%= link_to  "document", new_doc_edition_path %>
+    <%= link_to  "document", new_doc_edition_path, class: "btn btn-primary" %>
     <!--button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
            <i class="fa fa-file me-1"></i>
             <span class="fw-bold"> Editer </span> 
