--- a/app/views/pdf_commande/_synthese.html.erb
+++ b/app/views/pdf_commande/_synthese.html.erb
@@ -17,60 +17,60 @@
             <tbody>
                 <tr class="centered">
                     <td class="td-doc started">Prix</td>
-                    <td class="td-doc"> <%= custom_currency_format(du_prix(@commande)) %></td>
-                    <td class="td-doc"> <%= custom_currency_format(recu_prix(@commande)) %></td>
-                    <td class="td-doc"> <%= custom_currency_format(solde_prix_avant_avoirremb(@commande)) %></td>
+                    <td class="td-doc"> <%= custom_currency_format(du_prix(@doc_edition.commande)) %></td>
+                    <td class="td-doc"> <%= custom_currency_format(recu_prix(@doc_edition.commande)) %></td>
+                    <td class="td-doc"> <%= custom_currency_format(solde_prix_avant_avoirremb(@doc_edition.commande)) %></td>
                 </tr>
 
-                <% if avoir_deduit(@commande)  != 0  %>
+                <% if avoir_deduit(@doc_edition.commande)  != 0  %>
                     <tr class="centered">
                         <td class="td-doc started">Avoir</td>
                         <td class="td-doc"> <%= custom_currency_format(0) %></td>
-                        <td class="td-doc"> <%= custom_currency_format(avoir_deduit(@commande)) %></td>
-                        <td class="td-doc"> <%= custom_currency_format(-avoir_deduit(@commande)) %></td>
+                        <td class="td-doc"> <%= custom_currency_format(avoir_deduit(@doc_edition.commande)) %></td>
+                        <td class="td-doc"> <%= custom_currency_format(-avoir_deduit(@doc_edition.commande)) %></td>
                     </tr>
                 <% end %>
 
-                <% if remb_deduit(@commande) != 0 %>
+                <% if remb_deduit(@doc_edition.commande) != 0 %>
                     <tr class="centered">
                         <td class="td-doc started">Remboursement</td>
-                        <td class="td-doc"> <%= custom_currency_format(remb_deduit(@commande)) %> </td>
+                        <td class="td-doc"> <%= custom_currency_format(remb_deduit(@doc_edition.commande)) %> </td>
                         <td class="td-doc">  <%= custom_currency_format(0) %></td>
-                        <td class="td-doc"> <%= custom_currency_format(remb_deduit(@commande)) %></td>
+                        <td class="td-doc"> <%= custom_currency_format(remb_deduit(@doc_edition.commande)) %></td>
                     </tr>
                 <% end %>
 
                 <tr class="bolded centered">
                     <td class="td-doc top-bottom-bordered started">Totaux</td>
-                    <td class="td-doc top-bottom-bordered"> <%= custom_currency_format(du_prix(@commande) + 0 + remb_deduit(@commande)) %> </td>
-                    <td class="td-doc top-bottom-bordered">  <%= custom_currency_format(recu_prix(@commande) + 0 + avoir_deduit(@commande)) %></td>
+                    <td class="td-doc top-bottom-bordered"> <%= custom_currency_format(du_prix(@doc_edition.commande) + 0 + remb_deduit(@doc_edition.commande)) %> </td>
+                    <td class="td-doc top-bottom-bordered">  <%= custom_currency_format(recu_prix(@doc_edition.commande) + 0 + avoir_deduit(@doc_edition.commande)) %></td>
                 
-                    <% if solde_prix_avant_avoirremb(@commande) + -avoir_deduit(@commande) + remb_deduit(@commande) == 0 %>
+                    <% if solde_prix_avant_avoirremb(@doc_edition.commande) + -avoir_deduit(@doc_edition.commande) + remb_deduit(@doc_edition.commande) == 0 %>
                         <td class="td-doc top-bottom-bordered green-colored"> 
-                            <%= custom_currency_format(solde_prix_avant_avoirremb(@commande) + 
-                            -avoir_deduit(@commande) + remb_deduit(@commande)) %>
+                            <%= custom_currency_format(solde_prix_avant_avoirremb(@doc_edition.commande) + 
+                            -avoir_deduit(@doc_edition.commande) + remb_deduit(@doc_edition.commande)) %>
                         </td>
                     <% else %>
                         <td class="td-doc top-bottom-bordered red-colored"> 
-                            <%= custom_currency_format(solde_prix_avant_avoirremb(@commande) + 
-                            -avoir_deduit(@commande) + remb_deduit(@commande)) %>
+                            <%= custom_currency_format(solde_prix_avant_avoirremb(@doc_edition.commande) + 
+                            -avoir_deduit(@doc_edition.commande) + remb_deduit(@doc_edition.commande)) %>
                         </td>
                     <% end %>
                 </tr>
 
-                <% if du_caution(@commande) || recu_caution(@commande) != 0 %>
+                <% if du_caution(@doc_edition.commande) || recu_caution(@doc_edition.commande) != 0 %>
                     <tr class="bolded centered">
                         <td class="td-doc started">Caution</td>
-                        <td class="td-doc"> <%= custom_currency_format(du_caution(@commande)) %></td>
-                        <td class="td-doc"> <%= custom_currency_format(recu_caution(@commande)) %></td>
+                        <td class="td-doc"> <%= custom_currency_format(du_caution(@doc_edition.commande)) %></td>
+                        <td class="td-doc"> <%= custom_currency_format(recu_caution(@doc_edition.commande)) %></td>
                     
-                            <% if solde_caution(@commande) == 0 %>
+                            <% if solde_caution(@doc_edition.commande) == 0 %>
                                 <td class="td-doc green-colored"> 
-                                    <%= custom_currency_format(solde_caution(@commande)) %>
+                                    <%= custom_currency_format(solde_caution(@doc_edition.commande)) %>
                                 </td>
                             <% else %>
                                 <td class="td-doc red-colored"> 
-                                    <%= custom_currency_format(solde_caution(@commande)) %>
+                                    <%= custom_currency_format(solde_caution(@doc_edition.commande)) %>
                                 </td>
                             <% end %>
                     </tr>
@@ -84,7 +84,7 @@
     <%# if @messagemail.commentairedoc? %>
         <div class="cadre my-2">
         <span class="bolded">Commentaires </span> 
-        <span class=""> <%= @commentaire_doc %> </span> <br>
+        <span class=""> <%= @doc_edition.commentaires %> </span> <br>
         <br>
         </div>
     <%# end %>
