--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -6,7 +6,8 @@
     <%= render 'synthese' %>
 
     <%= link_to  "document", new_doc_edition_path, class: "btn btn-primary" %>
-    <!--button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+    
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
            <i class="fa fa-file me-1"></i>
             <span class="fw-bold"> Editer </span> 
     </button>
@@ -17,13 +18,8 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <%#= render "doc_editions/form", doc_edition: @doc_edition %>
 
-
-
-            <div id="doc_edition">
-                <%#= render @doc_edition %>
-            </div>
+            <%= render 'doc_editions/new' %>
 
         </div>
     </div-->
