mise en form profiles

--- a/app/views/pdf_commande/_infos.html.erb
+++ b/app/views/pdf_commande/_infos.html.erb
@@ -17,7 +17,7 @@
 
     <br>
     <span>Servi par </span> 
-    <span class="doc-important"> <%#= Profile.find(profileId).full_name %> </span> <br>
+    <span class="doc-important"> <%= @doc_edition.commande.profile.full_name %> </span> <br>
     <br>
 
     <span>Statut commande </span> 
