--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,27 +1,29 @@
-<%= form_with(model: profile) do |form| %>
-  <% if profile.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+<div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-      <ul>
-        <% profile.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+
+  <%= form_with(model: profile) do |form| %>
+    <% if profile.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+
+        <ul>
+          <% profile.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= custom_form_elements(form, 
+       [:prenom, :text_field], [:nom, :text_field] ) %>
+
+    <div class="input-group mb-1">
+      <%= form.label :profile_pic, class:"input-group-text label-with-format" %>
+      <%= form.file_field :profile_pic, class:"form-control m-1 p-1" %>
     </div>
+
+    <%= custom_submit_button(form) %>
+
   <% end %>
 
-  <div>
-    <%= form.label :prenom, style: "display: block" %>
-    <%= form.text_field :prenom %>
-  </div>
-
-  <div>
-    <%= form.label :nom, style: "display: block" %>
-    <%= form.text_field :nom %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
