--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -1,12 +1,28 @@
-<div id="<%= dom_id profile %>">
-  <p>
-    <strong>Prenom:</strong>
-    <%= profile.prenom %>
-  </p>
+<div id="<%= dom_id profile %>" class="my-2">
 
-  <p>
-    <strong>Nom:</strong>
-    <%= profile.nom %>
-  </p>
+  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+
+  <div class="row">
+    <div class="col-2">
+      <%= image_tag(profile.default_image, width: 100)  %>    
+    </div>
+    <div class="col-10">
+      <p>
+        <strong>Prenom:</strong>
+        <%= profile.prenom %>
+      </p>
+
+      <p>
+        <strong>Nom:</strong>
+        <%= profile.nom %>
+      </p>
+    </div>
+  </div>
+  
+
+
+    <%= links_record(profile) %>  
+
+  </div>
 
 </div>
