--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,47 +1,63 @@
-<%= form_with(model: meeting) do |form| %>
-  <% if meeting.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
+<div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
-      <ul>
-        <% meeting.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <%= form_with(model: meeting) do |form| %>
+    <% if meeting.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(meeting.errors.count, "error") %> prohibited this meeting from being saved:</h2>
+
+        <ul>
+          <% meeting.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= custom_form_elements(form, 
+        [:nom, :text_field]) 
+    %>
+  
+    <div class="input-group mb-1">
+      <%= form.label :datedebut, class: "input-group-text label-with-format" %>
+      <%= form.datetime_field :datedebut, class: "form-control m-1 p-1" %>
     </div>
+
+    <div class="input-group mb-1">
+      <%= form.label :datefin, class: "input-group-text label-with-format" %>
+      <%= form.datetime_field :datefin, class: "form-control m-1 p-1" %>
+    </div>
+
+    <% unless @client %>
+
+      <div class="input-group mb-1">
+        <%= form.label :commande_id, class: "input-group-text" %>
+        <%= form.select :commande_id, 
+          options_for_select(Commande.all.order(:nom).pluck(:nom, :id), selected: @commande&.id),
+          { include_blank: 'Select' },
+          { class: "form-select", disabled: @commande.present? } %>
+      </div>
+        
+    <% end %>
+      
+    <% unless @commande %>
+
+      <div class="input-group mb-1">
+        <%= form.label :client_id, class: "input-group-text" %>
+        <%= form.select :client_id, 
+          options_for_select(Client.all.order(:nom).pluck(:nom, :id), selected: @client&.id),
+          { include_blank: 'Select' },
+          { class: "form-select", disabled: @client.present? } %>
+      </div>  
+        
+    <% end %>
+
+    <div class="input-group mb-1">
+      <%= form.label :lieu, class: "input-group-text" %>
+      <%= form.select :lieu, Meeting::LIEU_OPTIONS, { include_blank: 'Select' }, class: "form-select" %>
+    </div>
+
+    <%= custom_submit_button(form) %>
+
   <% end %>
 
-  <div>
-    <%= form.label :nom, style: "display: block" %>
-    <%= form.text_field :nom %>
-  </div>
-
-  <div>
-    <%= form.label :datedebut, style: "display: block" %>
-    <%= form.date_field :datedebut %>
-  </div>
-
-  <div>
-    <%= form.label :datefin, style: "display: block" %>
-    <%= form.date_field :datefin %>
-  </div>
-
-  <div>
-    <%= form.label :commande_id, style: "display: block" %>
-    <%= form.text_field :commande_id %>
-  </div>
-
-  <div>
-    <%= form.label :client_id, style: "display: block" %>
-    <%= form.text_field :client_id %>
-  </div>
-
-  <div>
-    <%= form.label :lieu, style: "display: block" %>
-    <%= form.text_field :lieu %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
