--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,10 +1,4 @@
-<p style="color: green"><%= notice %></p>
 
 <%= render @meeting %>
 
-<div>
-  <%= link_to "Edit this meeting", edit_meeting_path(@meeting) %> |
-  <%= link_to "Back to meetings", meetings_path %>
-
-  <%= button_to "Destroy this meeting", @meeting, method: :delete %>
-</div>
+<%= return_model_index_button("Retour vers rendez-vous", meetings_path) %>
