--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -19,6 +19,16 @@
 
  <br> <br>
 
+
+
+<% if @commande.meetings.where('datedebut > ?', DateTime.now).exists? %>
+    <%= @commande.meetings.ids %>
+<% end %>
+
+
+
+
+
 <footer class="fixed-bottom footer-index bg-dark">
     <%= render 'commandes/footer' %>
 </footer>
