--- a/app/views/pdf_commande/document.html.erb
+++ b/app/views/pdf_commande/document.html.erb
@@ -1,6 +1,5 @@
-
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Document</title>
 </head>
 
@@ -20,3 +19,4 @@
 <%= render "pdf_commande/paiements" %> 
 <%= render "pdf_commande/avoirrembs" %> 
 <%= render "pdf_commande/synthese" %> 
+
