--- a/app/views/shared/doc_entete.html.erb
+++ b/app/views/shared/doc_entete.html.erb
@@ -1,3 +1,8 @@
-<div id="header" style="text-align: center;">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Document</title>
+</head>
+
+<div style="width: 900px; display: inline-block; text-align: center;">
     <%= wicked_pdf_image_tag asset_url('/images/logo_courant_public.png'), style: 'display: inline-block;' %>
 </div>
