--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -5,15 +5,19 @@
 
     <div class="row">
       <div class="col-10">
+        <%= link_to commande_path(commande), class: "text-decoration-none text-dark" do %>
           <strong><%= commande.ref_commande %> </strong>
           <%= commande.full_name %>
+        <% end %>
       </div>
       <div class="col-2 text-end">
-          <%= link_to "Show", "#collapseCommande", class: "btn btn-primary", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
+        <%= link_to "", "#collapseCommande#{dom_id(commande)}", 
+          class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+          role: "button", "aria-expanded": "false", "aria-controls": "collapseCommande#{dom_id(commande)}" %>
       </div>
     </div>
 
-    <div class="collapse" id="collapseCommande">
+    <div class="collapse" id="collapseCommande<%= dom_id(commande) %>">
 
       <p>
         <strong>Nom:</strong>
