--- a/app/views/shared/doc_footer.html.erb
+++ b/app/views/shared/doc_footer.html.erb
@@ -1,8 +1,9 @@
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Document</title>
+</head>
 
-   <br> <hr> <br>
-    
-    <div style="width: 900px; display: inline-block; text-align: center;">
-       <strong> SARL AUTOUR D'UN SOIR </strong> - 27, 29 Boulevard Carnot 06400 CANNES <br>
-        04 93 45 17 17 | contact@a1soir.com
-    </div>
-
+<div style="width: 900px; display: inline-block; text-align: center;">
+      <strong> SARL AUTOUR D'UN SOIR </strong> - 27, 29 Boulevard Carnot 06400 CANNES <br>
+      04 93 45 17 17 | contact@a1soir.com
+</div>
