--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -1,106 +1,130 @@
 <div id="<%= dom_id produit %>" class="my-2">
 
-  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
+    <div class="row g-0">
+      <div class="col-4">
 
-    <p>
-      <strong>Nom:</strong>
-      <%= produit.nom %>
-    </p>
+          <%= image_tag(produit.default_image, class: "img-fluid rounded-start")  %>
 
-    <%= image_tag(produit.image1) if produit.image1.present? %>
+      </div>
+      <div class="col-4">
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= produit.nom %>
+          </h5>
+          <p class="card-text">
+            <p>
+              <strong>Prixvente:</strong>
+              <%= produit.prixvente %>
+            </p>
 
-    <p>
-      <strong>Prixvente:</strong>
-      <%= produit.prixvente %>
-    </p>
+            <p>
+              <strong>Prixlocation:</strong>
+              <%= produit.prixlocation %>
+            </p>
 
-    <p>
-      <strong>Prixlocation:</strong>
-      <%= produit.prixlocation %>
-    </p>
-
-    <p>
-      <strong>Description:</strong>
-      <%= produit.description %>
-    </p>
-
-    <p>
-      <strong>Couleur:</strong>
-      <%= produit.couleur.nom if produit.couleur %>
-
-      <p>
-        Autres couleur(s) : 
-
-        <% same_reffrs_same_taille_others_couleurs(produit).each do |produit| %>
-          <%= produit.couleur.nom if produit.couleur %>
-
-        <% end %>
-      </p>
-
-    </p>
-
-
-    <p>
-      <strong>Taille:</strong>
-      <%= produit.taille.nom if produit.taille %>
-        
-      <p>
-        Autres taille(s) : 
-
-        <% same_reffrs_same_couleur_others_tailles(produit).each do |produit| %>
-          <%= produit.taille.nom if produit.taille %>
-
-        <% end %>
-      </p>
-  
-    </p>
- 
-
-    <p>
-      <strong>Categorie produit:</strong>
-      <%= produit.categorie_produit.nom if produit.categorie_produit %>
-    </p>
-
-    <p>
-      <strong>Caution:</strong>
-      <%= produit.caution %>
-    </p>
-
-    <p>
-      <strong>Handle:</strong>
-      <%= produit.handle %>
-    </p>
-
-    <p>
-      <strong>Reffrs:</strong>
-      <%= produit.reffrs %>
-    </p>
-
-    <p>
-      <strong>Quantite:</strong>
-      <%= produit.quantite %>
-    </p>
-
-    <p>
-      <strong>Fournisseur:</strong>
-      <%= produit.fournisseur_id %>
-    </p>
-
-    <p>
-      <strong>Dateachat:</strong>
-      <%= produit.dateachat %>
-    </p>
-
-    <% if current_user.admin? %>
-        <p>
-          <strong>Prixachat:</strong>
-          <%= produit.prixachat %>
-        </p>
+            <p>
+              <strong>Description:</strong>
+              <%= produit.description %>
+            </p>
+          </p>
+        </div>
+      </div>
       
-    <% end %>
-  
-    <%= links_record(produit) %>  
+      <div class="col-4">
+        <div class="card-body">
+          <p class="card-text">
+            <p>
+              <strong>Couleur:</strong>
+              <%= produit.couleur.nom if produit.couleur %>
+              <p>
+                Autres couleur(s) : 
+                <% same_reffrs_same_taille_others_couleurs(produit).each do |produit| %>
+                  <%= produit.couleur.nom if produit.couleur %>
+                <% end %>
+              </p>
+            </p>
 
+            <p>
+              <strong>Taille:</strong>
+              <%= produit.taille.nom if produit.taille %>           
+              <p>
+                Autres taille(s) : 
+                <% same_reffrs_same_couleur_others_tailles(produit).each do |produit| %>
+                  <%= produit.taille.nom if produit.taille %>
+                <% end %>
+              </p>        
+            </p>
+
+            <p>
+              <strong>Categorie produit:</strong>
+              <%= produit.categorie_produit.nom if produit.categorie_produit %>
+            </p>
+
+          </p>
+        </div>
+      </div>    
+
+      <div class="container"> 
+        <%= link_to "", "#collapseProduit#{dom_id(produit)}", 
+          class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+          role: "button", "aria-expanded": "false", "aria-controls": "collapseProduit#{dom_id(produit)}" %>
+
+                    <%= links_record(produit) %>  
+
+      </div>
+
+      <div class="collapse" id="collapseProduit<%= dom_id(produit) %>">
+
+        <div class="row g-0">
+          <div class="col-4">
+          
+            <%= image_tag(produit.qr_code, class:"rounded-start") if produit.qr_code.attached? %>
+          </div>
+          <div class="col-4">
+            <p>
+              <strong>Caution:</strong>
+              <%= produit.caution %>
+            </p>
+
+            <p>
+              <strong>Handle:</strong>
+              <%= produit.handle %>
+            </p>
+
+            <p>
+              <strong>Reffrs:</strong>
+              <%= produit.reffrs %>
+            </p>
+
+            <p>
+              <strong>Fournisseur:</strong>
+              <%= produit.fournisseur_id %>
+            </p>
+          </div>
+          
+          <div class="col-4">
+            <p>
+              <strong>Quantite:</strong>
+              <%= produit.quantite %>
+            </p>
+
+            <p>
+              <strong>Dateachat:</strong>
+              <%= produit.dateachat %>
+            </p>
+
+            <% if current_user.admin? %>
+              <p>
+                <strong>Prixachat:</strong>
+                <%= produit.prixachat %>
+              </p>
+            <% end %>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
