--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -7,6 +7,9 @@
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewArticle" })) %>
 
+<%= link_to "", scanqr_path(commande: @commande), 
+      class:"fa-solid fa-qrcode btn btn-sm btn-primary m-1 p-2", data: { turbo: false }  %> 
+
 <div class="collapse" id="collapseNewArticle">
     <div id="new_article" class="mb-3">
         <%= render partial: 'articles/form', locals: { commande_id: @commande.id, article: Article.new } %>
