--- a/app/views/categorie_produits/_form.html.erb
+++ b/app/views/categorie_produits/_form.html.erb
@@ -16,9 +16,10 @@
     <%= custom_form_elements(form, 
       [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field]) %>
 
+    <%= custom_submit_button(form) %>
+
   <% end %>
 
-  <%= custom_submit_button %>
 
 
 </div>
