--- a/app/views/fournisseurs/_form.html.erb
+++ b/app/views/fournisseurs/_form.html.erb
@@ -20,12 +20,10 @@
         [:nom, :text_field], [:tel, :text_field], [:mail, :text_field], 
         [:contact, :text_field], [:site, :text_field], [:notes, :text_area]) %>
 
-    <% end %>
+      <%= custom_submit_button(form) %>
 
-    <%= custom_submit_button %>
+    <% end %>
   
   </div>
-
-  
 
 <% end %>
