--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,7 +5,7 @@
     <div class="row d-flex align-items-center">
 
       <div class="col">
-        <%= image_tag(article.produit.image1, width: 50) if article.produit.image1.present? %>  
+        <%= image_tag(article.produit.default_image, width: 50) %>  
       </div>
     
       <div class="col">
