--- a/app/views/selection_produit/_selection_manuelle.html.erb
+++ b/app/views/selection_produit/_selection_manuelle.html.erb
@@ -1,12 +1,24 @@
 
+<%# ajouter logique pour filtres et recherche %>
+
+
+
 <% @produits.each do |produit| %>
+  <%= link_to selection_produit_path(produit: produit), remote: true do %>
 
-
-    <%= link_to url_for(produit: produit) do %>
-        <div class="card d-flex align-items-center mb-2">
-                <%= image_tag(produit.image1, width: 100) if produit.image1.present? %>
-                <%= produit.full_name %>
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <%= image_tag(produit.default_image, width: 100) %>
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"> <%= produit.full_name %> </h5>
+                    <p class="card-text"> <%= produit.description %></p>
+                </div>
+            </div>
         </div>
-        <% end %>
-    <% end %>
-    
+    </div>
+
+  <% end %>
+<% end %>
