--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -2,7 +2,7 @@
   "Articles", 
   "shirt", 
   link_to("", selection_produit_path(commande: @commande), 
-  class:"fa-solid fa-plus btn btn-sm btn-warning m-1 p-2"
+  class: "fa fa-plus btn btn-warning fw-bold"
 )) %>
 
 <div class="collapse" id="collapseNewArticle">
