--- a/app/views/selection_produit/index.html.erb
+++ b/app/views/selection_produit/index.html.erb
@@ -1,21 +1,52 @@
-<h2 class="text-center mb-2">Sélection produit</h2>
+<h2 class="text-center mb-4">Sélection produit</h2>
 
-<% unless @produit.present? %>
+
+<div class="container-fluid d-flex justify-content-center align-items-center">
+
+  <%= search_form_for @q, url: selection_produit_path, method: :get do |f| %>
+
+    <div class="input-group w-100">
+      <%= f.search_field :nom_cont, class: "form-control", placeholder: 'Chercher...' %>
+
+      <%= link_to selection_produit_path, class: 'btn btn-outline-danger rounded' do %>
+        <i class="fa fa-xl fa-circle-xmark"></i>
+      <% end %>
+      
+      <%= f.button class: 'btn btn-outline-success rounded' do %>
+        <i class="fa fa-xl fa-search mx-3"></i>
+      <% end %>        
+    </div>
+
+  <% end %>
+
+</div>
+
+
+<% if params[:q] %>
+  <%= render "selection_produit/produits_filtres" %>
+<% end %>
+
+
+
+
+
+
+<% unless @produit.present? || params[:q] %>
   <% button_configs = [
-    { path: display_qr_selection_produit_index_path, icon: "fa-qrcode", text: "QR code", color: "text-primary" },
+    { path: display_qr_selection_produit_index_path, icon: "fa-qrcode", text: "QR code", color: "text-secondary" },
     { path: display_manuelle_selection_produit_index_path, icon: "fa-hand", text: "Manuelle", color: "text-secondary" }
   ] %>
 
-<div class="d-flex flex-wrap justify-content-center align-items-center py-4">
-  <% button_configs.each do |config| %>
-    <%= button_to config[:path], class: "btn m-2 btn-topic mx-3 px-4",
-      data: { controller: "button-color", action: "click->button-color#handleClick" },
-      "data-original-color": config[:color] do %>
-      <i class="fa fa-solid fa-xl <%= config[:icon] %> <%= config[:color] %> <%= config[:text].downcase.parameterize %> <%= config[:color] %>" data-target="button-color.icon"></i>
-      <span class="ms-1 fw-bold text-dark"><%= config[:text] %></span>
+  <div class="d-flex flex-wrap justify-content-center align-items-center">
+    <% button_configs.each do |config| %>
+      <%= button_to config[:path], class: "btn btn-outline-primary m-2 btn-topic m-2 px-4",
+        data: { controller: "button-color", action: "click->button-color#handleClick" },
+        "data-original-color": config[:color] do %>
+        <i class="fa fa-solid fa-xl <%= config[:icon] %> <%= config[:color] %> <%= config[:text].downcase.parameterize %> <%= config[:color] %>" data-target="button-color.icon"></i>
+        <span class="ms-1 fw-bold text-dark"><%= config[:text] %></span>
+      <% end %>
     <% end %>
-  <% end %>
-</div>
+  </div>
 
 <% end %>
 
