--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,11 +1,11 @@
-<div data-controller="autohide" class="container text-center" style="position: fixed; z-index: 5;">
+<div data-controller="autohide" style="position: fixed; z-index: 5;">
   <% flash.each do |key, value| %>
     <% if key == "error" %>
-      <div class="alert alert-danger mx-4">
+      <div class="alert alert-danger">
         <%= value %>
       </div>
-    <% else %>
-      <div class="alert alert-success mx-4">
+    <% else%>
+      <div class="alert alert-success">
         <%= value %>
       </div>
     <% end %>
