--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,20 +16,20 @@
 
   <body>
     <%= render "shared/navbar_admin" %>
-    
-    <div class="container mt-2">
-      <div id="flash" class="row justify-content-center">
-        <div class="col-12 col-md-8 col-lg-6">
-          <%= render partial: "layouts/flash" %>
-        </div>
+
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="page-max-widthed">
+        <main class="p-0">
+          <div id="flash" class="mt-4" style="z-index: 10;">
+            <%= render partial: "layouts/flash" %>
+          </div>        
+          <div style="z-index: 0;">
+            <%= yield %>
+          </div>
+        </main>
       </div>
     </div>
 
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="mt-2 p-2 page-max-widthed"> 
-        <%= yield %>
-      </div>
-    </div>
   </body>
 
 
