--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,10 +18,14 @@
         total: <%= article.total %>  
         caution: <%= article.caution %>  
     
-
-        <%= link_to  "Add Sous article", selection_produit_path(
+        <div class="my-1">
+          <%= link_to selection_produit_path(
             commande: @commande, article: article), 
-            class: "fa fa-plus btn btn-warning fw-bold" %>
+            class: "btn btn-sm btn-warning fw-bold" do %>
+            <i class="fa fa-plus"></i>
+            <span>Sous-article </span>          
+          <% end %>
+        </div>    
 
       </div>
 
@@ -30,6 +34,17 @@
         <%= button_to "", edit_article_path(article), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
         <%= button_to "", article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger fa-solid fa-trash m-1" %>
       </div>
+      
+    </div>
+
+    <div class="container-fluid">
+      <% if article.sousarticles.present? %>
+        <hr>
+        <h5>Sous-articles:</h5>
+        <% article.sousarticles.each do |sousarticle| %>
+          <%= render partial: 'sousarticles/sousarticle', locals: { sousarticle: sousarticle } %>
+        <% end %>        
+      <% end %>
       
     </div>
     
