--- a/app/views/sousarticles/_sousarticle.html.erb
+++ b/app/views/sousarticles/_sousarticle.html.erb
@@ -1,37 +1,30 @@
 <div id="<%= dom_id sousarticle %>">
-  <p>
-    <strong>Article:</strong>
-    <%= sousarticle.article_id %>
-  </p>
+    <%#= sousarticle.article_id %>
+    <%#= sousarticle.produit_id %>
 
-  <p>
-    <strong>Produit:</strong>
-    <%= sousarticle.produit_id %>
-  </p>
+    <div class="row d-flex align-items-center">
 
-  <p>
-    <strong>Nature:</strong>
-    <%= sousarticle.nature %>
-  </p>
+      <div class="col-2 text-center">
+        <%= image_tag(sousarticle.produit.default_image, width: 25) %>  
+      </div>
 
-  <p>
-    <strong>Description:</strong>
-    <%= sousarticle.description %>
-  </p>
+      <div class="col">
+        <strong>Nature:</strong>  <%= sousarticle.nature %>
+        <strong>Description:</strong> <%= sousarticle.description %>
+        <strong>Prix:</strong>  <%= sousarticle.prix %>
+        <strong>Caution:</strong> <%= sousarticle.caution %>
+        <strong>Commentaires:</strong>   <%= sousarticle.commentaires %>
 
-  <p>
-    <strong>Prix:</strong>
-    <%= sousarticle.prix %>
-  </p>
+      </div>
 
-  <p>
-    <strong>Caution:</strong>
-    <%= sousarticle.caution %>
-  </p>
+      <div class="col text-end">
+        <%= link_to "", "#collapseSousarticle#{dom_id(sousarticle)}", 
+              class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", 
+              role: "button", "aria-expanded": "false", "aria-controls": "collapseSousarticle#{dom_id(sousarticle)}" %>
+        <%= button_to "", edit_sousarticle_path(sousarticle), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
+        <%= button_to "", sousarticle, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger fa-solid fa-trash m-1" %>
+      </div>
 
-  <p>
-    <strong>Commentaires:</strong>
-    <%= sousarticle.commentaires %>
-  </p>
+    </div>
 
 </div>
