avancement sous article - maj des prix avec sum sous article integrée

--- a/app/views/commandes/_synthese.html.erb
+++ b/app/views/commandes/_synthese.html.erb
@@ -1,4 +1,4 @@
 <div id="synthese-commande">
-    <%= custom_badge_boolean("solde prix", solde_prix(@commande)) %>
-    <%= custom_badge_boolean("solde caution", solde_caution(@commande)) %>
+    <%= custom_badge_boolean("prix", solde_prix(@commande)) %>
+    <%= custom_badge_boolean("caution", solde_caution(@commande)) %>
 </div>
