--- a/app/views/sousarticles/_sousarticle.html.erb
+++ b/app/views/sousarticles/_sousarticle.html.erb
@@ -9,11 +9,13 @@
       </div>
 
       <div class="col">
-        <strong>Nature:</strong>  <%= sousarticle.nature %>
-        <strong>Description:</strong> <%= sousarticle.description %>
-        <strong>Prix:</strong>  <%= sousarticle.prix %>
-        <strong>Caution:</strong> <%= sousarticle.caution %>
-        <strong>Commentaires:</strong>   <%= sousarticle.commentaires %>
+
+        <h6 class="fw-bold"> <%= sousarticle.produit.nom %>  </h6>
+        Nature:  <%= sousarticle.nature %>
+        Description: <%= sousarticle.description %>
+        Prix: <%= sousarticle.prix %>
+        Caution: <%= sousarticle.caution %>
+        Commentaires:   <%= sousarticle.commentaires %>
 
       </div>
 
